Bug 307559 - rekonq just crashes after opening some tabs
Summary: rekonq just crashes after opening some tabs
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.1
Platform: openSUSE Linux
: NOR crash
Target Milestone: 2.0
Assignee: Andrea Diamantini
URL:
Keywords:
: 310911 311209 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-09-29 06:37 UTC by squan
Modified: 2012-12-05 19:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description squan 2012-09-29 06:37:37 UTC
Application: rekonq (1.1)
KDE Platform Version: 4.9.1 "release 561"
Qt Version: 4.8.3
Operating System: Linux 3.4.6-2.10-desktop x86_64
Distribution: "openSUSE 12.2 (x86_64)"

-- Information about the crash:
rekonq just crashes after opening some tabs.
BTW: even if not crashing, the tab preview is just annoying, chromium does it better.

The crash can be reproduced some of the time.

-- Backtrace:
Application: rekonq (rekonq), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fa81447f780 (LWP 1488))]

Thread 4 (Thread 0x7fa80017c700 (LWP 1489)):
#0  0x00007fa80d9488f4 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fa812ce9eb7 in ?? () from /usr/lib64/libQtWebKit.so.4
#2  0x00007fa812ce9ee9 in ?? () from /usr/lib64/libQtWebKit.so.4
#3  0x00007fa80d944e0e in start_thread () from /lib64/libpthread.so.0
#4  0x00007fa813c9a2bd in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7fa7ff87b700 (LWP 1490)):
#0  0x00007fa813c9213f in poll () from /lib64/libc.so.6
#1  0x00007fa80bfb4684 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fa80bfb47a4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fa80f235cf6 in QEventDispatcherGlib::processEvents (this=0x7fa7f80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fa80f20685f in QEventLoop::processEvents (this=this@entry=0x7fa7ff87ae00, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fa80f206ae8 in QEventLoop::exec (this=0x7fa7ff87ae00, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fa80f108fc0 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007fa80f10bf9c in QThreadPrivate::start (arg=0x1cb4fb0) at thread/qthread_unix.cpp:338
#8  0x00007fa80d944e0e in start_thread () from /lib64/libpthread.so.0
#9  0x00007fa813c9a2bd in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fa7fe9fe700 (LWP 1491)):
#0  0x00007fa80d9488f4 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fa813899ef7 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7fa813ba7640 <QTWTF::pageheap_memory>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00007fa813899f29 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x00007fa80d944e0e in start_thread () from /lib64/libpthread.so.0
#4  0x00007fa813c9a2bd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fa81447f780 (LWP 1488)):
[KCrash Handler]
#6  operator bool (this=0x10) at ../../src/corelib/tools/qshareddata.h:158
#7  QPixmap::size (this=0x0) at image/qpixmap.cpp:616
#8  0x00007fa814001e05 in TabPreviewPopup::thumbnailSize() const () from /usr/lib64/libkdeinit4_rekonq.so
#9  0x00007fa814002cb5 in TabBar::showTabPreview() () from /usr/lib64/libkdeinit4_rekonq.so
#10 0x00007fa80f21e39f in QMetaObject::activate (sender=0x3f76e40, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3556
#11 0x00007fa80f224ccf in QSingleShotTimer::timerEvent (this=0x3f76e40) at kernel/qtimer.cpp:317
#12 0x00007fa80f21c31c in QObject::event (this=0x3f76e40, e=<optimized out>) at kernel/qobject.cpp:1166
#13 0x00007fa80e33574c in QApplicationPrivate::notify_helper (this=this@entry=0x1cb6420, receiver=receiver@entry=0x3f76e40, e=e@entry=0x7fffd20938d0) at kernel/qapplication.cpp:4557
#14 0x00007fa80e339bca in QApplication::notify (this=0x7fffd2093c90, receiver=0x3f76e40, e=0x7fffd20938d0) at kernel/qapplication.cpp:4418
#15 0x00007fa8114870d6 in KApplication::notify (this=0x7fffd2093c90, receiver=0x3f76e40, event=0x7fffd20938d0) at /usr/src/debug/kdelibs-4.9.1/kdeui/kernel/kapplication.cpp:311
#16 0x00007fa80f207b0e in QCoreApplication::notifyInternal (this=0x7fffd2093c90, receiver=0x3f76e40, event=0x7fffd20938d0) at kernel/qcoreapplication.cpp:915
#17 0x00007fa80f238561 in sendEvent (event=0x7fffd20938d0, receiver=<optimized out>) at kernel/qcoreapplication.h:231
#18 QTimerInfoList::activateTimers (this=0x1cb8a60) at kernel/qeventdispatcher_unix.cpp:626
#19 0x00007fa80f235674 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:186
#20 timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:180
#21 0x00007fa80f235691 in idleTimerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:233
#22 0x00007fa80bfb43b5 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#23 0x00007fa80bfb46e8 in ?? () from /usr/lib64/libglib-2.0.so.0
#24 0x00007fa80bfb47a4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#25 0x00007fa80f235cd6 in QEventDispatcherGlib::processEvents (this=0x1c83ad0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#26 0x00007fa80e3d5a5e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#27 0x00007fa80f20685f in QEventLoop::processEvents (this=this@entry=0x7fffd2093b50, flags=...) at kernel/qeventloop.cpp:149
#28 0x00007fa80f206ae8 in QEventLoop::exec (this=0x7fffd2093b50, flags=...) at kernel/qeventloop.cpp:204
#29 0x00007fa80f20b788 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#30 0x00007fa814082c71 in kdemain () from /usr/lib64/libkdeinit4_rekonq.so
#31 0x00007fa813bd7455 in __libc_start_main () from /lib64/libc.so.6
#32 0x0000000000400721 in _start ()

Reported using DrKonqi
Comment 1 Andrea Diamantini 2012-10-01 15:16:24 UTC
Git commit 35329c2c6409f22510d3fcf0acd2c6d23c6becd7 by Andrea Diamantini.
Committed on 01/10/2012 at 17:20.
Pushed by adjam into branch 'master'.

Get sure label pixmap exists

M  +4    -1    src/tabpreviewpopup.cpp

http://commits.kde.org/rekonq/35329c2c6409f22510d3fcf0acd2c6d23c6becd7
Comment 2 Jekyll Wu 2012-11-30 13:11:37 UTC
*** Bug 310911 has been marked as a duplicate of this bug. ***
Comment 3 Jekyll Wu 2012-12-05 19:57:49 UTC
*** Bug 311209 has been marked as a duplicate of this bug. ***