Get sure label pixmap exists

BUG: 307559